# jamebot

./: .gitignore  Cargo.toml  Cross.toml  README.md  token
.cargo/: config
.sqlx/: query-3a0ed3d5114665f722684b14aa961b6f38f76ba8b7979c1592663709bb10565b.json  query-5489b2b7c64909e36eeb1c56c221d7d159f67261d3c0cb0f0ecc1acd8eb4e655.json  query-5efe77443cfa5a35b926aadbcbc5f62bb3cdb6d992f6a384a18e1a4a1edb8d19.json  query-796f778e8e42beebdbf629bc91becc086f7b8ffe4d68010c812e016174b37991.json  query-ea359a04fd6d53a31f47e1d69cd9851f4595142e3dfb866a44dc2d3aa6e62b04.json  query-f1f2d2053a2c1eb7e47b730aea977d7933dad5f6341b94136d65b7607b80d518.json
jamebot_data/: Cargo.toml
jamebot_data/src/: databases.rs  lib.rs  structs.rs
migrations/: 20231120201357_001_init_db.sql  20231125232302_001_init_db.sql
src/: config.rs  data.rs  event_handler.rs  main.rs
src/commands/: meta.rs  mod.rs  rejects.rs
src/commands/fun/: hug.rs  mod.rs  urban.rs
src/commands/general/: avatar.rs  mod.rs  userinfo.rs
src/commands/guild_config/: configuration.rs
src/commands/moderation/: elevate.rs  mod.rs
src/commands/utility/: colour.rs  info.rs  mod.rs  roll.rs  search.rs  urban.rs
src/events/: emotes.rs  mod.rs
src/util/: mod.rs
